; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/usb/host/extr_ohci-omap.c_omap_ohci_clock_power.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/usb/host/extr_ohci-omap.c_omap_ohci_clock_power.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@usb_dc_ck = common dso_local global i32 0, align 4
@usb_host_ck = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @omap_ohci_clock_power to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @omap_ohci_clock_power(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = icmp ne i32 %3, 0
  br i1 %4, label %5, label %11

5:                                                ; preds = %1
  %6 = load i32, i32* @usb_dc_ck, align 4
  %7 = call i32 @clk_enable(i32 %6)
  %8 = load i32, i32* @usb_host_ck, align 4
  %9 = call i32 @clk_enable(i32 %8)
  %10 = call i32 @udelay(i32 100)
  br label %16

11:                                               ; preds = %1
  %12 = load i32, i32* @usb_host_ck, align 4
  %13 = call i32 @clk_disable(i32 %12)
  %14 = load i32, i32* @usb_dc_ck, align 4
  %15 = call i32 @clk_disable(i32 %14)
  br label %16

16:                                               ; preds = %11, %5
  ret void
}

declare dso_local i32 @clk_enable(i32) #1

declare dso_local i32 @udelay(i32) #1

declare dso_local i32 @clk_disable(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
